2010-06-09  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/component/feedcomponent.py:
	Don't pass the reset event downstream when the component has the pads
	disconnected.

2010-06-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/muxers/webm.py:
	Use streamable property not indexed as it has changed in upstream
	git.

2010-06-09  Zaheer Abbas Merali  <zaheerabbas@merali.org>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Add remote call to remove all clients.

2010-06-09  Jan Urbanski  <jurbanski@flumotion.com>

	* common/validate-registry.py:
	There is no reason why sockets should be instantiable. There once was,
	when the sockets were something more than just an identifier.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/multibouncer.py:
	Register the algorithm plugs in the static bouncer before starting them,
	otherwise if the setup of the plug takes a long time, setMedium
	can get called before that and then its remote interface will not get exposed.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/bouncers/algorithms/icalbouncer.xml:
	* flumotion/component/bouncers/algorithms/ipbouncer.xml:
	* flumotion/component/bouncers/algorithms/tokentest.xml:
	* flumotion/component/bouncers/base.py:
	* flumotion/component/bouncers/multibouncer.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	Fix the socket name.

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
        Use the function from the correct module.

2010-06-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Don't use the newly added element_has_property, but the older
	element_factory_has_property to avoid bundling issues with recent managers