@@ -47,6 +47,8 @@ class FeedComponent(basecomponent.BaseComponent):
 
     # how often to update the UIState feeder statistics
     FEEDER_STATS_UPDATE_FREQUENCY = 12.5
+    keepStreamheaderForLater = False
+    dropStreamHeaders = True
 
     logCategory = 'feedcomponent'
 
@@ -748,10 +750,16 @@ class FeedComponent(basecomponent.BaseComponent):
 
             def remove_in_caps_buffers(pad, buffer, eater):
                 if buffer.flag_is_set(gst.BUFFER_FLAG_IN_CAPS):
+                    if self.keepStreamheaderForLater:
+                        self.log("We got buffer with IN_CAPS which we are "
+                                 "keeping for later %r", eater)
+                        eater.streamheader.append(buffer)
+                        return False
                     self.info("We got streamheader buffer which " \
                         "we are dropping because we do not want this just " \
                         "after a reconnect because it breaks everything ")
                     return False
+
                 # now we have a buffer with no flag set
                 # we should remove the handler
                 self.log("We got buffer with no in caps flag set on "
@@ -765,7 +773,15 @@ class FeedComponent(basecomponent.BaseComponent):
                 else:
                     self.warning("buffer probe handler is None, bad news on "
                                  "eater %r", eater)
+
+                if not self.dropStreamHeaders:
+                    self.log("Pushing earlier buffers with IN_CAPS flag")
+                    for buff in eater.streamheader:
+                        pad.push(buff)
+
+                eater.streamheader = []
                 return True
+
             if not eater.streamheaderBufferProbeHandler:
                 self.log("Adding buffer probe on depay src pad on "
                          "eater %r", eater)
